[package]
name = "unblob-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "unblob_native"
crate-type = [
    "cdylib",  # for Python extension
    "rlib",  # for benchmarking
]

[dependencies]
pyo3 = "0.18.3"

[dev-dependencies]
approx = "0.5.0"
criterion = "0.3.5"
rand = "0.8.4"

[[bench]]
name = "benches_main"
harness = false
