[package]
name = "unblob-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "unblob"
crate-type = [
    "cdylib",  # for Python extension
    "rlib",  # for benchmarking
]

[dependencies]
pyo3 = { version = "0.15.1",  features=["abi3-py38", "extension-module"]}
[dev-dependencies]
approx = "0.5.0"
criterion = "0.3.5"
rand = "0.8.4"

[[bench]]
name = "benches_main"
harness = false



[package.metadata.maturin]
name = "unblob._rust"
