[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "unblob-rust"
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = [
  "cdylib", # for Python extension
  "rlib",   # for benchmarking
]
name = "unblob_rust"

[dependencies]
log = "0.4.22"
pyo3 = "0.22.4"
pyo3-log = "0.12.0"
statrs = "0.18.0"
thiserror = "1.0.64"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4.1"

[dev-dependencies]
approx = "0.5.0"
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
harness = false
name = "benches_main"

[lints.rust]
# Required for Rust >= 1.84 && pyo3 < 0.23
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(addr_of)'] }
